create APIs for getting the list of users
